logo controller
